--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -39,10 +39,39 @@
 
     <!-- 박스 목록 스크롤 영역 -->
     <div class="box-container">
-        <div class="box">멋쟁이사자처럼</div>
-        <div class="box">멋쟁이호랑이처럼</div>
-        <div class="box">멋쟁이너구리처럼</div>
-        <div class="box">멋쟁이하츄핑처럼</div>
+        <div class="box">
+            <div class="box-icon">
+            </div>
+            <div class="box-content">
+                <p class="box-title">멋쟁이사자처럼</p>
+                <p class="box-description">음식 부스</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-icon">
+            </div>
+            <div class="box-content">
+                <p class="box-title">멋쟁이사자처럼</p>
+                <p class="box-description">음식 부스</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-icon">
+            </div>
+            <div class="box-content">
+                <p class="box-title">멋쟁이사자처럼</p>
+                <p class="box-description">음식 부스</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-icon">
+            </div>
+            <div class="box-content">
+                <p class="box-title">멋쟁이사자처럼</p>
+                <p class="box-description">음식 부스</p>
+            </div>
+        </div>
+    
         <!-- 필요하면 더 많은 박스 추가 -->
     </div>
 </div>
