feat/ logo, hambergerBtn

--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static', path='css/main/home_page2.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', path='css/main/home_page3.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', path='css/main/hamberger.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/main/logo.css') }}">
     <script>
         const jsonFilePath = "{{ url_for('static', path='json/bus_info.json') }}";
     </script>
@@ -17,10 +18,20 @@
     <script src="{{ url_for('static', path='js/main/toggle.js') }}" defer></script>
     <script src="{{ url_for('static', path='js/main/home.js') }}" defer></script>
     <script src="{{ url_for('static', path='js/main/hamberger.js') }}" defer></script>
+    <script src="{{ url_for('static', path='js/main/logo.js') }}" defer></script>
     <title>2024 GNU FIESTA</title>
 </head>
 
 <body>
+    <!-- 로고 -->
+    <div>
+        <div id="logoImg">
+            <img src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}" alt="logo">
+            <p class="logoDate">2024.10.16.WED ~ 10.18.FRI</p>
+        </div>
+    </div>
+
+    <!-- 햄버거 버튼 -->
     <a class="menu-trigger" href="#">
         <span class="hambergerBread"></span>
         <span class="hambergerCenter"></span>
@@ -34,13 +45,13 @@
             <div id="hrefCOMMENT" data-url="/comment">COMMENT</div>
             <div id="hrefFAQ" data-url="faq">FAQ</div>
         </div>
-
         <div id="piestaWebHost">
             <a id="ohgam" href="https://www.instagram.com/gnu_5gam/">오감 총학생회</a>
             &nbsp;X&nbsp;
             <a id="mutsa" href="https://www.instagram.com/likelion_gnu/">멋쟁이사자처럼</a>
         </div>
     </div>
+
 
     <!-- Page1 포스터&디데이 -->
     <div id="home_poster">
@@ -50,20 +61,11 @@
             <div id="dday">D -</div>
             <div id="countdown"></div>
         </div>
-
     </div>
+
+
     <!-- Page2 라인업 -->
     <div id="home_lineup">
-        <!-- 로고 div -->
-        <div>
-            <div id="logoImg">
-                <img src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}" alt="logo">
-                <p class="logoDate">2024.10.16.WED ~ 10.18.FRI</p>
-            </div>
-        </div>
-
-
-
         <div class="blankTop">
             <div class="lineUp">LINE UP</div>
             <div class="piestaDates">
@@ -88,9 +90,6 @@
     </div>
 
 
-
-
-
     <!-- Page3 공지&오시는길 -->
     <div id="home_info">
         <div class="announcement titleBox">
@@ -98,54 +97,30 @@
             <div class="title">공지사항</div>
         </div>
 
-        <div class="announcementBoxContainer">
-            <div class="announcementBox">
-                <div class="announcementTitle">
-                    <div>[우천 안내]</div>
-                    <div>우천 시 공지사항</div>
-                </div>
-                <div class="announcementContent">
-                    <div>우천시 이벤트 부스 조기 마감 될 </div>
-                </div>
-            </div>
-        </div>
-        <!-- <div class="noticeContainer">
-            {% for notice in noticeAll %}
-            <div class="announcementBoxContainer"></div>
-                <div class="announcementBox">
-                    <div class="announcementTitle">
-                        <div>{{ notice.category }}</div>
-                        <div>{{ notice.title }}</div>
-                    </div>
-                    <div class="announcementContent">
-                        <div>{{ notice.content }}</div>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-        </div> -->
+
         
-
-
-
+        <!-- 오시는 길 title -->
         <div class="vehicle titleBox">
             <img class="icon" src="{{ url_for('static', path='icons/bus_icon.svg')}}" alt="">
             <div class="title">오시는 길 (버스)</div>
         </div>
 
-
+        <!-- 오시는 길 토글 -->
         <div>
+            <!-- 칠암캠퍼스 버스 정보 컨테이너 -->
             <div class="toggleBox">
-
+                <!-- 칠암캠퍼스 버스 정보 title -->
                 <div class="toggleList1">
                     <img class="toggle" src="{{ url_for('static', path='icons/toggle_icon.svg')}}" alt="">
                     <div class="campus" onclick="toggleList('busList1')">경상국립대학교 칠암캠퍼스</div>
                 </div>
-            
-                <div id="busList1" style="display: block;"> <!-- 기본적으로 숨기기 -->
+                <!-- 칠암캠퍼스 버스 정보 토글 -->
+                <div id="busList1" style="display: block;">
+                    <!-- 지도 컨테이너 -->
                     <div class="mapBox">
                         <img src="{{ url_for('static', path='images/map_chilam.svg')}}" alt="">
                     </div>
+                    <!-- 버스 상세 모달 불러오기 -->
                     <span onclick="showBusModalChilam('130')">130</span>
                     <span onclick="showBusModalChilam('132')">132</span>
                     <span onclick="showBusModalChilam('133')">133</span>
@@ -162,17 +137,20 @@
 
             <hr class="dottedLine">
             
-            
+            <!-- 통영캠퍼스 버스 정보 컨테이너 -->
             <div class="toggleBox">
+                <!-- 통영캠퍼스 버스 정보 title -->
                 <div>
                     <img class="toggle" src="{{ url_for('static', path='icons/toggle_icon.svg')}}" alt="">
                     <div class="campus" onclick="toggleList('busList2')">경상국립대학교 통영캠퍼스</div>
                 </div>
-            
-                <div id="busList2" style="display: none;"> <!-- display none 추가 -->
+                <!-- 통영캠퍼스 버스 정보 토글 -->
+                <div id="busList2" style="display: none;">
+                    <!-- 지도 컨테이너 -->
                     <div class="mapBox">
                         <img src="{{ url_for('static', path='images/map_tongyeong.svg')}}" alt="">
                     </div>
+                    <!-- 버스 상세 모달 불러오기 -->
                     <div>
                         <span>통영출발</span>
                         <span onclick="showBusModalTYCW('15:50', '통영', '통영출발')">15:50</span>
@@ -194,17 +172,20 @@
 
             <hr class="dottedLine">
             
-            
+            <!-- 창원캠퍼스 버스 정보 컨테이너 -->
             <div class="toggleBox">
+                <!-- 창원캠퍼스 버스 정보 title -->
                 <div>
                     <img class="toggle" src="{{ url_for('static', path='icons/toggle_icon.svg')}}" alt="">
                     <div class="campus" onclick="toggleList('busList3')">경상국립대학교 창원산학캠퍼스</div>
                 </div>
-            
-                <div id="busList3" style="display: none;"> <!-- display none 추가 -->
+                <!-- 창원캠퍼스 버스 정보 토글 -->
+                <div id="busList3" style="display: none;">
+                    <!-- 지도 컨테이너 -->
                     <div class="mapBox">
                         <img src="{{ url_for('static', path='images/map_tongyeong.svg')}}" alt="">
                     </div>
+                    <!-- 버스 상세 정보 모달 불러오기 -->
                     <div>
                         <span>창원출발</span>
                         <span onclick="showBusModalTYCW('16:50', '창원', '창원출발')">16:50</span>
@@ -226,9 +207,7 @@
 
             <hr class="dottedLine">
 
-
-
-
+            <!-- 칠암캠퍼스 버스 정보 모달 (시내버스) -->
             <div id="Modal1" class="busModal">
                 <div class="busModalContent">
                     <div class="busModalTitle">
@@ -268,7 +247,7 @@
                 </div>
             </div>
 
-
+            <!-- 통영, 창원캠퍼스 버스 정보 모달 (시외버스) -->
             <div id="Modal2" class="busModal">
                 <div class="busModalContent">
                     <div class="busModalTitle">
@@ -295,8 +274,6 @@
                     </div>
                 </div>
             </div>
-            
-
         </div>
     </div>
 
