--- a/static/css/main/home_page3.css
+++ b/static/css/main/home_page3.css
@@ -12,62 +12,15 @@ body {
   overflow: hidden;
 }
 
-#home_poster {
-  background: linear-gradient(#3b2862, #2c2f74 25%, #999999);
-}
-
-#home_lineup {
-  background: linear-gradient(#3b2862, #2c2f74 25%, #999999);
-}
-
-#home_info {
+#home_poster, #home_lineup, #home_info {
   background: linear-gradient(#3b2862, #2c2f74 25%, #999999);
 }
 
 
 
-/* PIESTA LOGO */
-#logoImg {
-  position: fixed;
-  width: 60vw;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
-}
-.logoDate {
-  text-align: center;
-  font-family: "Pretendard-Regular";
-  color: #afafaf;
-  font-size: 2.5vw;
-  letter-spacing: 0.5vw;
-}
-/* .logo-visible {
-  opacity: 1;
-  visibility: visible;
-} */
 
-#hamburger {
-  position: fixed;
-  width: 10vw;
-  top: 9%;
-  left: 90%;
-  transform: translate(-50%, -50%);
-  opacity: 0; /* 초기값으로 0 설정 */
-  visibility: hidden; /* 초기값으로 hidden 설정 */
-  transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
-}
 
-/* 다른 파일에서 사용할 경우 */
-/* #hamburger {
-  position: fixed;
-  width: 10vw;
-  top: 9%;
-  left: 90%;
-  transform: translate(-50%, -50%);
-} */
+
 
 
 /* 공지사항 */
@@ -95,6 +48,10 @@ body {
   overflow: hidden;
   display: flex;
   position: relative;
+  overflow-x: auto;
+}
+.announcementBoxContainer {
+  display: inline-block;
 }
 .announcementBox {
   background-color: rgb(217, 217, 217, 0.5);
