--- a/templates/comment/comment.html
+++ b/templates/comment/comment.html
@@ -11,12 +11,34 @@
     <script src="static/js/comment/comment.js" defer></script>
   </head>
   <body>
-    <img id="hambuger" src="static/images/hambuger.svg" alt="" />
-    <img
-      class="logo"
-      src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}"
-      alt="logo"
-    />
+    <!-- 로고 -->
+    <div>
+        <div id="logoImg">
+            <img src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}" alt="logo">
+            <p class="logoDate">2024.10.16.WED ~ 10.18.FRI</p>
+        </div>
+    </div>
+
+    <!-- 햄버거 버튼 -->
+    <a class="menu-trigger" href="#">
+        <span class="hambergerBread"></span>
+        <span class="hambergerCenter"></span>
+        <span class="hambergerBread"></span>
+    </a>
+    <div id="hambergerContents" class="hambergerContents">
+        <div id="navContainer">
+            <div id="hrefHOME" data-url="/home">HOME</div>
+            <div id="hrefTIMETABLE" data-url="/timetable">TIMETABLE</div>
+            <div id="hrefBOOTH" data-url="/">BOOTH</div>
+            <div id="hrefCOMMENT" data-url="/comment">COMMENT</div>
+            <div id="hrefFAQ" data-url="faq">FAQ</div>
+        </div>
+        <div id="piestaWebHost">
+            <a id="ohgam" href="https://www.instagram.com/gnu_5gam/">오감 총학생회</a>
+            &nbsp;X&nbsp;
+            <a id="mutsa" href="https://www.instagram.com/likelion_gnu/">멋쟁이사자처럼</a>
+        </div>
+    </div>
     <div class="notice">
       <div class="noticetitle">💬 방명록</div>
       <div class="noticec">
