--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -71,6 +71,31 @@
                 <p class="box-description">음식 부스</p>
             </div>
         </div>
+        <div class="box">
+          <div class="box-icon">
+          </div>
+          <div class="box-content">
+              <p class="box-title">멋쟁이사자처럼</p>
+              <p class="box-description">음식 부스</p>
+          </div>
+      </div>
+      <div class="box">
+        <div class="box-icon">
+        </div>
+        <div class="box-content">
+            <p class="box-title">멋쟁이사자처럼</p>
+            <p class="box-description">음식 부스</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box-icon">
+        </div>
+        <div class="box-content">
+            <p class="box-title">멋쟁이사자처럼</p>
+            <p class="box-description">음식 부스</p>
+        </div>
+      </div>
+    
     
         <!-- 필요하면 더 많은 박스 추가 -->
     </div>
