--- a/static/css/main/home_page2.css
+++ b/static/css/main/home_page2.css
@@ -2,7 +2,7 @@ font-face {
   font-family: Prata;
 }
 
-.blankTop {
+.blankTop2 {
   margin-top: 18vh;
 }
 
@@ -57,16 +57,29 @@ font-face {
 }
 
 .lineupContainer {
-  display: flex;
-  justify-content: center;
   position: relative;
   width: 100%;
-  height: 100vh; /* 필요에 따라 높이를 조정 */
+  height: 100vh; /* 부모 컨테이너가 뷰포트 전체를 차지하도록 설정 */
+  display: flex;
+  justify-content: center;
+  align-items: center; /* 수직 및 수평 중앙 정렬 */
+  overflow: hidden;
 }
 
 .lineUpList {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transition: transform 0.5s ease-in-out;
+  display: none; /* 기본적으로 숨김 상태 */
+  flex-direction: row; /* 가로로 나열 */
+  justify-content: center; /* 중앙 정렬 */
+  align-items: center; /* 수직 중앙 정렬 */
+  width: 100%; /* 전체 너비 사용 */
+  height: auto; /* 자동 높이 */
+  overflow-x: auto; /* 가로 스크롤 가능 */
+  white-space: nowrap; /* 텍스트 줄바꿈 방지 */
+  z-index: 2; /* 다른 요소보다 위에 표시 */
+}
+
+.entertainter {
+  width: 50vh; /* 엔터테이너 이미지 너비 */
+  scroll-snap-align: center; /* 스크롤 스냅 정렬 */
+  z-index: 3; /* 이미지가 다른 요소들 위에 있도록 설정 */
 }
