--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -17,12 +17,15 @@
     <!-- Page1 포스터&디데이 -->
     <div id="home_poster">
         <!-- 포스터 들어올 자리 -->
-        <img src="{{ url_for('static', path='images/PIESTA_poster.jpeg')}}" class="poster">
-        <div class="ddayTop">
-            <div id="dday">D -</div>
-            <div id="countdown"></div>
+        <div class="blankTop1">
+            <div class="posterContainer">
+                <img src="{{ url_for('static', path='images/PIESTA_poster.jpeg')}}" class="poster">
+            </div>
+            <div class="ddayTop">
+                <div id="dday">D - </div>
+                <div id="countdown"></div>
+            </div>
         </div>
-
     </div>
     <!-- Page2 라인업 -->
     <div id="home_lineup">
@@ -31,25 +34,32 @@
             <img src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}" alt="logo">
             <p class="logoDate">2024.10.16.WED ~ 10.18.FRI</p>
         </div>
-        <div class="blankTop">
+        <div class="blankTop2">
             <div class="lineUp">LINE UP</div>
             <div class="piestaDates">
                 <div class="date" data-date="10/16">10/16</div>
                 <div class="date" data-date="10/17">10/17</div>
                 <div class="date" data-date="10/18">10/18</div>
             </div>
-            <img src="{{ url_for('static', path='images/bubble.svg')}}" alt="bubble" id="bubble1">
-            <img src="{{ url_for('static', path='images/bubble.svg')}}" alt="bubble" id="bubble2">
+            <div class="bubbles">
+                <img src="{{ url_for('static', path='images/bubble.svg')}}" alt="bubble" id="bubble1">
+                <img src="{{ url_for('static', path='images/bubble.svg')}}" alt="bubble" id="bubble2">
+            </div>
             <div class="lineupContainer">
-                <div class="lineUpList" id="lineup16">
-                    <div class="commingSoon">???</div>
+                <div class="lineUpList" id="lineup/16">
+                    <img src="{{ url_for('static', path='images/16_entertainer1.png')}}" id="RoyKim"
+                        class="entertainter">
+                    <img src="{{ url_for('static', path='images/16_entertainer2.png')}}" id="Bol4" class="entertainter">
                 </div>
-                <div class="lineUpList" id="lineup17">
-                    <div class="commingSoon">???</div>
+                <div class="lineUpList" id="lineup/17">
+                    <img src="{{ url_for('static', path='images/17_entertainer.png')}}" alt="???" id="17entertainer"
+                        class="entertainter">
                 </div>
-                <div class="lineUpList" id="lineup18">
-                    <div class="commingSoon">???</div>
+                <div class="lineUpList" id="lineup/18">
+                    <img src="{{ url_for('static', path='images/18_entertainer.png')}}" alt="???" id="18entertainer"
+                        class="entertainter">
                 </div>
+
             </div>
         </div>
     </div>
