--- a/static/css/main/hamberger.css
+++ b/static/css/main/hamberger.css
@@ -114,7 +114,6 @@
 /* 메뉴 항목 스타일링 - nav */
 .hambergerContents div {
     margin: 3vh 0;
-    font-size: 3vw;
     cursor: pointer;
 
     transition: transform 0.5s ease-out, opacity 0.5s ease-out;
@@ -177,4 +176,19 @@
 }
 #mutsa:active {
     color: #FF7711;
+}
+
+
+
+
+@media(max-width: 768px) {
+    .hambergerContents div {
+        font-size: 4vw;    
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .hambergerContents div {
+        font-size: 3vw;    
+    }
 }
